# tokount

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .shfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LANGUAGES.md  LICENSE  PKGBUILD  README.md  bench_parse.py  benchmark.sh  build.rs  clippy.toml  languages.json  output.txt  plot.py  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: badge.yml  ci.yml  docker.yml  pr-stats.yml  publish.yml  release.yml  stale.yml  welcome.yml
.github/workflows/scripts/: extract-changelog.sh  extract_changelog.sh  generate-srcinfo.sh  update-sha256.sh  update-version.sh
assets/: badge.json  bench_results.json
src/: analyze.rs  cli.rs  display.rs  git.rs  lib.rs  main.rs  types.rs
src/engine/: fsm.rs  language.rs  mod.rs  reader.rs  scanner.rs  stats.rs  walker.rs
src/engine/fsm/: classify.rs  literate.rs  mod.rs  parser.rs  token.rs  types.rs
src/engine/fsm/parser/: helpers.rs  mod.rs  state.rs
tests/: errors.rs  flags.rs  lang_accuracy.rs  snapshots.rs
tests/common/: mod.rs
tests/fixtures/monorepo/: .gitignore
tests/fixtures/monorepo/backend/: .gitignore  Cargo.toml
tests/fixtures/monorepo/backend/src/: db.rs  main.rs  routes.rs
tests/fixtures/monorepo/backend/tests/: integration.rs
tests/fixtures/monorepo/docs/: architecture.md
tests/fixtures/monorepo/frontend/: .gitignore  package.json
tests/fixtures/monorepo/frontend/components/: Button.tsx
tests/fixtures/monorepo/frontend/src/: app.ts  index.ts
tests/fixtures/monorepo/infra/: docker-compose.yml
tests/fixtures/monorepo/infra/scripts/: deploy.sh
tests/fixtures/multi_lang/: main.rs  script.py
tests/fixtures/nested_gitignore/proj_a/: .gitignore
tests/fixtures/nested_gitignore/proj_b/: .gitignore
tests/fixtures/single_rust/: .gitignore
tests/fixtures/single_rust/src/: main.rs
tests/lang/: Daml.daml  Dockerfile  Gemfile  MSBuild.csproj  Makefile  Modelica.mo  PKGBUILD  Rakefile  SConstruct  Snakefile  Tera.tera  alloy.als  apl.apl  arduino.ino  arturo.art  asciidoc.adoc  asn1.asn1  ats.dats  autoconf.in  autohotkey.ahk  awk.awk  bash.bash  bazel.bzl  bicep.bicep  bqn.bqn  brainfuck.bf  brightscript.brs  c.c  c3.c3  c_header.h  cairo.cairo  cangjie.cj  chapel.chpl  cil.cil  circom.circom  cmake.cmake  codeql.ql  cppm.cppm  crystal.cr  cshell.csh  (+200 more)
tests/lang.expected/: Daml.daml.expected  Dockerfile.expected  MSBuild.csproj.expected  Makefile.expected  Modelica.mo.expected  NuGet.Config.expected  PKGBUILD.expected  Rakefile.expected  Snakefile.expected  Tera.tera.expected  abnf.abnf.expected  alloy.als.expected  apl.apl.expected  arduino.ino.expected  arturo.art.expected  asciidoc.adoc.expected  asn1.asn1.expected  ats.dats.expected  awk.awk.expected  ballerina.bal.expected  bazel.bzl.expected  bean.bean.expected  bicep.bicep.expected  bitbake.bb.expected  brainfuck.bf.expected  brightscript.brs.expected  c.c.expected  cairo.cairo.expected  cangjie.cj.expected  chapel.chpl.expected  cil.cil.expected  circom.circom.expected  clojure.clj.expected  cmake.cmake.expected  codeql.ql.expected  cogent.cogent.expected  cpp.cpp.expected  crystal.cr.expected  csharp.cs.expected  csv.csv.expected  (+184 more)
tests/lang/snapshots/: Daml.json  Dockerfile.json  MSBuild.json  MSBuild_csproj.json  Modelica_mo.json  Tera.json  Tera_tera.json  abnf.json  abnf_abnf.json  alloy.json  apl.json  apl_apl.json  arduino.json  arduino_ino.json  arturo.json  arturo_art.json  asciidoc.json  asciidoc_adoc.json  asn1.json  ats.json  awk_awk.json  ballerina.json  ballerina_bal.json  bazel.json  bean.json  bicep.json  bicep_bicep.json  bitbake.json  bqn_bqn.json  brightscript.json  brightscript_brs.json  c.json  c3.json  c_c.json  cairo.json  cairo_cairo.json  cangjie_cj.json  chapel.json  chapel_chpl.json  cil.json  (+255 more)
tests/snapshots/: monorepo.json  multi_lang.json  nested_gitignore.json  single_rust.json
