[package]
name = "tokount"
version = "1.0.1"
description = "Fast line counter for codebases (tokei-powered) used by ghlang"
authors = ["MihaiStreames <72852703+MihaiStreames@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/MihaiStreames/ghlang"
repository = "https://github.com/MihaiStreames/ghlang"
keywords = ["code-analysis", "developer-tools", "tokei", "cli", "metrics"]
categories = ["command-line-utilities", "development-tools::metrics", "development-tools::code-analysis"]
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokei = "14.0.0"
walkdir = "2.5.0"
clap = { version = "4.5.60", features = ["derive"] }

[[bin]]
name = "tokount"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
cloned_instead_of_copied = "warn"            # Match ruff's unnecessary copy/clone guidance
flat_map_option = "warn"                     # Keep option handling direct and readable
inefficient_to_string = "warn"               # Avoid extra allocations in string conversions
manual_let_else = "warn"                     # Prefer idiomatic let-else patterns
manual_ok_or = "warn"                        # Keep Result construction explicit
manual_string_new = "warn"                   # Avoid redundant String::new usage
map_unwrap_or = "warn"                       # Prefer map_or/map_or_else patterns
semicolon_if_nothing_returned = "warn"       # Avoid trailing semicolons that hide return values
uninlined_format_args = "warn"               # Encourage inline format args like Rustfmt/Clippy suggests
unnested_or_patterns = "warn"                # Keep match patterns flat
fn_params_excessive_bools = "warn"           # Mirror Python's "too many bool args" caution
needless_pass_by_value = "warn"              # Avoid unnecessary moves
trivially_copy_pass_by_ref = "warn"          # Keep tiny Copy types passed by value
unused_self = "warn"                         # Ensure self is used intentionally
redundant_closure_for_method_calls = "warn"  # Prefer direct method calls
redundant_clone = "warn"                     # Avoid redundant cloning
too_many_arguments = "warn"                  # Flag functions with too many params; threshold in clippy.toml
too_many_lines = "warn"                      # Keep functions short and focused; threshold in clippy.toml
cognitive_complexity = "warn"                # Limit branching/nesting complexity; threshold in clippy.toml
enum_variant_name = "warn"                   # Avoid redundant enum name prefix in variants; threshold in clippy.toml
type_complexity = "warn"                     # Flag overly nested/complex type expressions; threshold in clippy.toml
