[package]
name = "tokount"
version = "2.1.6"
description = "The fastest line counter for codebases"
authors = ["MihaiStreames <72852703+MihaiStreames@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/velox-sh/tokount"
repository = "https://github.com/velox-sh/tokount"
keywords = ["code-analysis", "developer-tools", "loc", "cli", "metrics"]
categories = ["command-line-utilities", "development-tools", "visualization"]
edition = "2024"
rust-version = "1.92"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
crossbeam-channel = "0.5.15"
ignore = "0.4.25"
indicatif = "0.18.4"
memchr = "2.8.0"
memmap2 = "0.9.10"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
phf_codegen = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lib]
name = "tokount"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "tokount"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"

[profile.profiling]
inherits = "release"
opt-level = 3
debug = true
lto = false
codegen-units = 1
strip = false
panic = "unwind"

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[lints.clippy]
cloned_instead_of_copied = "warn"            # match ruff's unnecessary copy/clone guidance
flat_map_option = "warn"                     # keep option handling direct and readable
inefficient_to_string = "warn"               # avoid extra allocations in string conversions
manual_let_else = "warn"                     # prefer idiomatic let-else patterns
manual_ok_or = "warn"                        # keep Result construction explicit
manual_string_new = "warn"                   # avoid redundant String::new usage
map_unwrap_or = "warn"                       # prefer map_or/map_or_else patterns
semicolon_if_nothing_returned = "warn"       # avoid trailing semicolons that hide return values
uninlined_format_args = "warn"               # encourage inline format args like Rustfmt/Clippy suggests
unnested_or_patterns = "warn"                # keep match patterns flat
fn_params_excessive_bools = "warn"           # mirror Python's "too many bool args" caution
needless_pass_by_value = "warn"              # avoid unnecessary moves
trivially_copy_pass_by_ref = "warn"          # keep tiny Copy types passed by value
unused_self = "warn"                         # ensure self is used intentionally
redundant_closure_for_method_calls = "warn"  # prefer direct method calls
redundant_clone = "warn"                     # avoid redundant cloning
too_many_arguments = "warn"                  # flag functions with too many params; threshold in clippy.toml
too_many_lines = "warn"                      # keep functions short and focused; threshold in clippy.toml
cognitive_complexity = "warn"                # limit branching/nesting complexity; threshold in clippy.toml
enum_variant_names = "warn"                  # avoid redundant enum name prefix in variants; threshold in clippy.toml
type_complexity = "warn"                     # flag overly nested/complex type expressions; threshold in clippy.toml
dbg_macro = "warn"                           # no debug output left in committed code
empty_drop = "warn"                          # drop impls with no body are pointless
exit = "warn"                                # use proper error propagation instead of process::exit
get_unwrap = "warn"                          # encode None/Err cases in the type system
rc_buffer = "warn"                           # Rc<Vec<T>> / Rc<String> wastes a layer of indirection
rc_mutex = "warn"                            # prefer RwLock or message passing over Rc<Mutex<T>>
rest_pat_in_fully_bound_structs = "warn"     # catch stray .. in exhaustive struct patterns
